updating html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
 
 	<title>Paul D. Alvarado</title>
-
+  <style>
+    h1 {
+      color: white;
+      background-color: black;
+      padding: 15px 30px 45px 60px;
+      text-align: center;
+      font-size: 60pt;
+      text-decoration: underline;
+    }
+    </style>
 </head>
 
 <body>
