Updating html file

--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
       font-size: 60pt;
       text-decoration: underline;
     }
+
+    img {
+      display: block;
+      margin-left: auto;
+      margin-left: auto;
+    }
     </style>
+
 </head>
 
 <body>
 
-  <h1>All About Me</h1>
+    <h1 style="color:slategrey">All About Me</h1> 
     <p>Hi, my name is Paul Alvarado and I was born and raised in Phoenix, Arizona.</p>
 
 </body>
