--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-
     <h1 style="color:slategrey">All About Me</h1> 
+    <img src="Paul Headshot.jpg" height="42" width="42">
     <p>Hi, my name is Paul Alvarado and I was born and raised in Phoenix, Arizona.</p>
 
 </body>
