--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <h1 style="color:slategrey">All About Me</h1> 
     <p>Hi, my name is Paul Alvarado and I was born and raised in Phoenix, Arizona.</p>
-    <img src="Paul Headshot.jpg" height="42" width="42">
+    <img src="Paul Headshot.jpg">
 
 </body>
 </html>
