--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     img {
       display: block;
       margin-left: auto;
-      margin-left: auto;
+      margin-right: auto;
     }
     </style>
 
