--- a/index.html
+++ b/index.html
@@ -13,19 +13,58 @@
       text-decoration: underline;
     }
 
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+    .container {
+    position: relative;
+    width: 50%;
     }
+
+    .image {
+      opacity: 1;
+      display: block;
+      width: 100%;
+      height: auto;
+      transition: .5s ease;
+      backface-visibility: hidden;
+    }
+
+    .middle {
+      transition: .5s ease;
+      opacity: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%)
+      }
+
+      .container:hover .image {
+        opacity: 0.3;
+      }
+
+      .container:hover .middle {
+        opacity: 1;
+      }
+
+      .text {
+        background-color: #4CAF50;
+        color: white;
+        font-size: 16px;
+        padding: 16px 32px;
+      }
     </style>
 
 </head>
 
 <body>
     <h1 style="color:slategrey">All About Me</h1> 
+    <div class="container">
+        <img src="Paul Headshot.jpg" alt="Avatar" class="image" style="width:100%">
+        <div class="middle">
+          <div class="text">Paul Alvarado</div>
+        </div>
+    </div>
     <p>Hi, my name is Paul Alvarado and I was born and raised in Phoenix, Arizona.</p>
-    <img src="Paul Headshot.jpg">
+    
 
 </body>
 </html>
