--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Paul D. Alvarado</title>
+	<title>About Me</title>
   <style>
     h1 {
       color: white;
@@ -25,6 +25,8 @@
       height: auto;
       transition: .5s ease;
       backface-visibility: hidden;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .middle {
